peac_dev/force-app/main/default/objects/Asset__c/fields/State_Method__c.field-meta.xml
<CustomField>
    <fullName>State_Method__c</fullName>
    <label>State Depreciation Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Straight Line</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>SYD</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>DDB</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>DU</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>S/L Non 1/2</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>DDB Non 1/2</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>S/L Non 1/2 (2)</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Manual</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>DDB no switch</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>DDB to S/L</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>