peac_dev/force-app/main/default/objects/Asset__c/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>