peac_dev/force-app/main/default/objects/Asset__c/fields/Tax_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Tax_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the date and time that the taxes were auto - calculated</inlineHelpText>
    <label>Tax Date / Time</label>
    <type>DateTime</type>
</CustomField>