peac_dev/force-app/main/default/objects/Asset__c/fields/Tax_Exempt_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_Equipment__c</fullName>
    <inlineHelpText>Defaults to No. Select Yes if the Equipment is Tax Exempt.</inlineHelpText>
    <label>Tax Exempt Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>