peac_dev/force-app/main/default/objects/Asset__c/fields/Tax_Zip_Updated__c.field-meta.xml
<CustomField>
    <fullName>Tax_Zip_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Zip Updated</label>
    <type>Checkbox</type>
</CustomField>