peac_dev/force-app/main/default/objects/Asset__c/fields/Title_Processor__c.field-meta.xml
<CustomField>
    <fullName>Title_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Title Processor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>