peac_dev/force-app/main/default/objects/Asset__c/fields/Title_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Title_Y_N__c</fullName>
    <label>Title Y/N</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>