peac_dev/force-app/main/default/objects/Asset__c/fields/Total_Meter_Types__c.field-meta.xml
<CustomField>
    <fullName>Total_Meter_Types__c</fullName>
    <description>if zero the CPC should be false in Opportunity</description>
    <label>Total Meter Types</label>
    <summaryForeignKey>Meter_Type__c.Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>