peac_dev/force-app/main/default/objects/Asset__c/fields/Total_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_Amount__c</fullName>
    <formula>City_Tax_Amount__c + County_Tax_Amount__c + State_Tax_Amount__c + City_Transit_Tax_Amount__c + County_Transit_Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>