peac_dev/force-app/main/default/objects/Asset__c/fields/Total_Upfront_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Upfront_Tax_Amount__c</fullName>
    <formula>Upfront_County_Tax_Amount__c + Upfront_City_Transit_Tax_Amount__c + Upfront_City_Tax_Amount__c + Upfront_County_Transit_Tax_Amount__c + Upfront_State_Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Upfront Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>