peac_dev/force-app/main/default/objects/Asset__c/fields/Trigger_Asset_PB__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Asset_PB__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, it will trigger process builder actions to fire on the asset. Used by opportunity process builders to set this field and trigger changes on asset.</inlineHelpText>
    <label>Trigger Asset Recalc</label>
    <type>Checkbox</type>
</CustomField>