peac_dev/force-app/main/default/objects/Asset__c/fields/Upfront_City_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Upfront_City_Location_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Upfront City Location Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>