peac_dev/force-app/main/default/objects/Asset__c/fields/Upfront_City_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Upfront_City_Tax_Amount__c</fullName>
    <label>Upfront City Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>