peac_dev/force-app/main/default/objects/Asset__c/fields/Upfront_County_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Upfront_County_Location_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Upfront County Location Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>