peac_dev/force-app/main/default/objects/Asset__c/fields/Upfront_County_Transit_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Upfront_County_Transit_Tax_Amount__c</fullName>
    <label>Upfront County Transit Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>