peac_dev/force-app/main/default/objects/Asset__c/fields/Upfront_Responsibility_Code__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Responsibility_Code__c</fullName>
    <label>Upfront Responsibility Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D</fullName>
                <label>Bank Pays</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Bank Pays Lessor</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Lessor Pays</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>N/A</label>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>