peac_dev/force-app/main/default/objects/Asset__c/fields/Upfront_State_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Upfront_State_Location_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Upfront State Location Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>