peac_dev/force-app/main/default/objects/Asset__c/fields/Upfront_State_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Upfront_State_Tax_Amount__c</fullName>
    <label>Upfront State Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>