peac_dev/force-app/main/default/objects/Asset__c/fields/Upfront_Tax_Basis__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Tax_Basis__c</fullName>
    <formula>IF(!ISBLANK(IL_Upfront_Tax_Code__c),
 IF(TEXT(Upfront_Tax_Method__c) = &quot;GRM&quot;,
  IF(Rental_Amount_Override__c &lt;= 0, 
   Rental_Amount_fml__c, Rental_Amount_Override__c),
         List_Price__c
   ),
   null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contains Asset Rental Amount as Infolease Tax Basis if Tax Method is GRM, else tax basis is list price.</inlineHelpText>
    <label>Upfront Tax Basis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>