peac_dev/force-app/main/default/objects/Asset__c/fields/Upfront_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Tax_Code__c</fullName>
    <label>Upfront Tax Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tax_Codes</valueSetName>
    </valueSet>
</CustomField>