peac_dev/force-app/main/default/objects/Asset__c/fields/Upfront_Tax_Method__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Tax_Method__c</fullName>
    <label>Upfront Tax Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GRM</fullName>
            </value>
            <value>
                <fullName>PPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>