peac_dev/force-app/main/default/objects/Asset__c/fields/Upfront_Tax_Paid_To__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Tax_Paid_To__c</fullName>
    <label>Upfront Tax Paid To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>County</fullName>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>