peac_dev/force-app/main/default/objects/Asset__c/fields/Usage_Additional_Rate__c.field-meta.xml
<CustomField>
    <fullName>Usage_Additional_Rate__c</fullName>
    <label>Usage - Additional Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>