peac_dev/force-app/main/default/objects/Asset__c/fields/Usage_Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Usage_Billing_Cycle__c</fullName>
    <label>Usage Billing Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>