peac_dev/force-app/main/default/objects/Asset__c/fields/Usage_Dealer_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Usage_Dealer_Invoice_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Usage - Dealer Invoice #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>