peac_dev/force-app/main/default/objects/Asset__c/fields/Usage_User_Table__c.field-meta.xml
<CustomField>
    <fullName>Usage_User_Table__c</fullName>
    <label>Tax Exempt Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Requested</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Received</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Exempt Equipment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>