peac_dev/force-app/main/default/objects/Asset__c/fields/Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Make__c</fullName>
    <label>Vehicle Make</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ameritrans</fullName>
            </value>
            <value>
                <fullName>Audi</fullName>
            </value>
            <value>
                <fullName>Auto Car</fullName>
            </value>
            <value>
                <fullName>Bluebird</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>Buick</fullName>
            </value>
            <value>
                <fullName>Cadillac</fullName>
            </value>
            <value>
                <fullName>Champion Crusader</fullName>
            </value>
            <value>
                <fullName>Chevrolet</fullName>
            </value>
            <value>
                <fullName>Chrysler</fullName>
            </value>
            <value>
                <fullName>Collins</fullName>
            </value>
            <value>
                <fullName>Craftsmen</fullName>
            </value>
            <value>
                <fullName>Dodge</fullName>
            </value>
            <value>
                <fullName>Eldorado National Co</fullName>
            </value>
            <value>
                <fullName>Executive Coach Builders</fullName>
            </value>
            <value>
                <fullName>Fontaine</fullName>
            </value>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>Freightliner</fullName>
            </value>
            <value>
                <fullName>General Motors</fullName>
            </value>
            <value>
                <fullName>Glaval</fullName>
            </value>
            <value>
                <fullName>GMC</fullName>
            </value>
            <value>
                <fullName>GreatDane</fullName>
            </value>
            <value>
                <fullName>Hino</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Hummer</fullName>
            </value>
            <value>
                <fullName>Infiniti</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Irizar</fullName>
            </value>
            <value>
                <fullName>Isuzu</fullName>
            </value>
            <value>
                <fullName>Jeep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>