peac_dev/force-app/main/default/objects/Asset__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Light Duty</fullName>
            </value>
            <value>
                <fullName>Medium Duty</fullName>
            </value>
            <value>
                <fullName>Heavy Duty</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Motorcoach</fullName>
            </value>
            <value>
                <fullName>School Bus</fullName>
            </value>
            <value>
                <fullName>Shuttle Bus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>