peac_dev/force-app/main/default/objects/Asset__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VIN (Vehicle Identification Number)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>