peac_dev/force-app/main/default/objects/Asset__c/recordTypes/TFG_Asset.recordType-meta.xml
<RecordType>
    <fullName>TFG_Asset</fullName>
    <active>true</active>
    <label>TFG Asset</label>
</RecordType>