peac_dev/force-app/main/default/objects/Asset__c/validationRules/City_Tax_Percentages_Not_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>City_Tax_Percentages_Not_Editable</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISCHANGED(Tax_Date_Time__c)), NOT(ISPICKVAL(City_Tax_Code__c, &apos;028&apos;)), OR(ISCHANGED(City_Tax_Percentage__c), ISCHANGED(City_Transit_Tax_Percentage__c)))</errorConditionFormula>
    <errorMessage>City Tax Percentage or City Transit Tax Percentage cannot be updated unless City Tax Code = &quot;028 - Rate Override&quot;.</errorMessage>
</ValidationRule>