peac_dev/force-app/main/default/objects/Asset__c/validationRules/County_Tax_Percentages_Not_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>County_Tax_Percentages_Not_Editable</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISCHANGED(Tax_Date_Time__c)), NOT(ISPICKVAL(County_Tax_Code__c, &apos;028&apos;)), OR(ISCHANGED(County_Tax_Percentage__c), ISCHANGED(County_Transit_Tax_Percentage__c)))</errorConditionFormula>
    <errorMessage>County Tax Percentage or County Transit Tax Percentage cannot be updated unless County Tax Code = &quot;028 - Rate Override&quot;.</errorMessage>
</ValidationRule>