peac_dev/force-app/main/default/objects/Asset__c/validationRules/Manufacturer_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Manufacturer_Required</fullName>
    <active>true</active>
    <description>SAL-4932</description>
    <errorConditionFormula>AND(

ISPICKVAL(Equipment_Code__c,&apos;Copiers&apos;),
ISBLANK(Manufacturer__c),

OR(
$Profile.Name  = &quot;Partner Ambassador&quot;, 
$Profile.Name  = &quot;CMS&quot;
     )
)</errorConditionFormula>
    <errorDisplayField>Manufacturer__c</errorDisplayField>
    <errorMessage>Manufacturer is required when Equipment Code is &apos;Office Equipment - Copiers</errorMessage>
</ValidationRule>