peac_dev/force-app/main/default/objects/Asset__c/validationRules/State_Tax_Percentage_Not_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>State_Tax_Percentage_Not_Editable</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  NOT(ISCHANGED(Tax_Date_Time__c)), 
  NOT(ISPICKVAL(State_Tax_Code__c, &apos;028&apos;)), 
  ISCHANGED(State_Tax_Percentage__c),
  AND(
    NOT(ISPICKVAL(State_Tax_Code__c, &apos;050&apos;)),
    NOT(ISPICKVAL(State_Tax_Code__c, &apos;031&apos;)),
    NOT(ISPICKVAL(State_Tax_Code__c, &apos;036&apos;)),
    State_Tax_Percentage__c != 0
  )  
)</errorConditionFormula>
    <errorMessage>State Tax Percentage cannot be updated unless State Tax Code = &quot;028 - Rate Override&quot;.</errorMessage>
</ValidationRule>