peac_dev/force-app/main/default/objects/Asset__c/validationRules/TC_Sales_Field_Lockdown.validationRule-meta.xml
<ValidationRule>
    <fullName>TC_Sales_Field_Lockdown</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED (Equipment_Code__c) &amp;&amp; Opportunity__r.Current_User_Sales__c &amp;&amp; Opportunity__r.In_Lease_Lockdown_Stage__c</errorConditionFormula>
    <errorDisplayField>Equipment_Code__c</errorDisplayField>
    <errorMessage>Equipment Code locked for sales users past the application stage</errorMessage>
</ValidationRule>